# execution-trace

./: .gitignore  Cargo.toml  README.md
caller/: Cargo.toml
caller/src/: main.rs
crates/execution-trace/: Cargo.toml
crates/execution-trace/src/: lib.rs  shallow_storage.rs
crates/http-server/: Cargo.toml
crates/http-server/src/: main.rs
crates/http-server/src/routes/: mod.rs  trace_block.rs
crates/http-server/src/tracers/: callret.rs  mod.rs
crates/live-tester/: Cargo.toml
crates/live-tester/src/: main.rs
src/: cli_args.rs  cli_main.rs  lib.rs  main.rs  memory_reader.rs  shallow_storage.rs
src/routes/: health.rs  trace_block.rs
src/tracers/: callret.rs  mod.rs
test-chain-contract/: Forc.toml
test-chain-contract/src/: main.sw
test-contract/: Forc.toml
test-contract/src/: main.sw
