[package]
name = "fuel-execution-trace"
version = "0.1.0"
edition = "2021"

[dependencies]
fuel-core-client = { path = "../fuel-core/crates/client" }
fuel-core-types =  { path = "../fuel-core/crates/types" }
fuel-vm = { version = "0.59.1" }
fuels = { git = "https://github.com/FuelLabs/fuels-rs", branch = "dento/streaming-decoder" }
# fuels = "0.66"
fuel-abi-types = "0.8"

primitive-types = { version = "0.12", default-features = false }
hex = "0.4.3"

anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.26", features = ["derive", "env"] }
axum = { version = "0.8", features = ["macros"] }
utoipa = { version = "5", features = ["axum_extras"]}
axum-macros = "0.5"
tracing = "0.1.41"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "reqwest", "vendored"] }

[patch.crates-io]
fuel-vm = { path = "../fuel-vm/fuel-vm" }
