[workspace]
members = [
  "crates/execution-trace",
  "crates/http-server",
  "crates/live-tester",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "unwind"

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["concurrency", "cryptography::cryptocurrencies", "emulators"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
version = "0.1.0"

[workspace.dependencies]
# Workspace members
fuel-execution-trace = { version = "0.1.0", path = "./crates/execution-trace", default-features = false }
fuel-execution-trace-http-server = { version = "0.1.0", path = "./crates/http-server", default-features = false }

# Fuel dependencies
fuels = "0.70"
fuel-vm = "0.60.0"
fuel-core-client = "0.42.0"
fuel-core-types =  "0.42.0"
fuel-core-storage =  "0.42.0"
fuel-abi-types = "0.8"

# External dependencies
anyhow = "1"
clap = { version = "4.5.26", features = ["derive", "env"] }
hex = "0.4.3"
log = "0.4"
pretty_env_logger = "0.4"
primitive-types = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
