[package]
name = "fuel-execution-trace"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
fuel-core-client.workspace = true
fuel-core-types.workspace = true
fuel-vm.workspace = true

hex.workspace = true
primitive-types.workspace = true
thiserror.workspace = true
tracing.workspace = true
