[package]
name = "fuel-execution-trace-http-server"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
fuel-execution-trace.workspace = true

fuel-core-client.workspace = true
fuel-vm.workspace = true
fuels.workspace = true
fuel-abi-types.workspace = true

anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

axum = { version = "0.8", features = ["macros"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras"]}
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "reqwest", "vendored"] }
